docs/pages/versions/v48.0.0/sdk/build-properties.mdx
---
title: BuildProperties
description: A config plugin that allows customizing native build properties during prebuild.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-48/packages/expo-build-properties'
packageName: 'expo-build-properties'
---

import APISection from '~/components/plugins/APISection';
import { ConfigPluginExample } from '~/components/plugins/ConfigSection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import PlatformsSection from '~/components/plugins/PlatformsSection';

`expo-build-properties` is a [config plugin](/config-plugins/introduction/) configuring the native build properties
of your **android/gradle.properties** and **ios/Podfile.properties.json** directories during [Prebuild](/workflow/prebuild).

> **info** This config plugin configures how [Prebuild command](/workflow/prebuild) generates the native **android** and **ios** folders
> and therefore cannot be used with projects that don't run `npx expo prebuild` (bare projects).

<PlatformsSection ios simulator android emulator />

## Installation

<APIInstallSection hideBareInstructions={true} />

## Usage

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-build-properties",
        {
          "android": {
            "compileSdkVersion": 31,
            "targetSdkVersion": 31,
            "buildToolsVersion": "31.0.0"
          },
          "ios": {
            "deploymentTarget": "13.0"
          }
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

### Example app.config.js usage

```js app.config.js
export default {
  expo: {
    plugins: [
      [
        'expo-build-properties',
        {
          android: {
            compileSdkVersion: 31,
            targetSdkVersion: 31,
            buildToolsVersion: '31.0.0',
          },
          ios: {
            deploymentTarget: '13.0',
          },
        },
      ],
    ],
  },
};
```

### All configurable properties

[`PluginConfigType`](#pluginconfigtype) interface represents currently available configuration properties.

## API

<APISection packageName="expo-build-properties" apiName="BuildProperties" />
