docs/pages/versions/v55.0.0/sdk/build-properties.mdx
---
modificationDate: April 02, 2026
title: BuildProperties
description: A config plugin that allows customizing native build properties during prebuild.
sourceCodeUrl: 'https://github.com/expo/expo/tree/main/packages/expo-build-properties'
packageName: 'expo-build-properties'
platforms: ['android', 'ios', 'tvos']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ConfigPluginExample } from '~/ui/components/ConfigSection';
import { Tabs, Tab } from '~/ui/components/Tabs';

`expo-build-properties` is a [config plugin](/config-plugins/introduction/) configuring the native build properties
of your **android/gradle.properties** and **ios/Podfile.properties.json** directories during [Prebuild](/workflow/continuous-native-generation).

> **info** This config plugin configures how [Prebuild command](/workflow/continuous-native-generation/#usage) generates the native **android** and **ios** directories
> and therefore cannot be used with projects that don't run `npx expo prebuild` (bare projects).

## Installation

<APIInstallSection />

## Usage

<ConfigPluginExample>

<Tabs>

<Tab label="app.json">

```json app.json|collapseHeight=450
{
  "expo": {
    "plugins": [
      [
        "expo-build-properties",
        {
          "android": {
            "compileSdkVersion": {{compileSdkVersion}},
            "targetSdkVersion": {{targetSdkVersion}},
            "buildToolsVersion": "{{buildToolsVersion}}"
          },
          "ios": {
            "deploymentTarget": "{{iosDeploymentTarget}}"
          }
        }
      ]
    ]
  }
}
```

</Tab>

<Tab label="app.config.js">

```js app.config.js|collapseHeight=450
export default {
  expo: {
    plugins: [
      [
        'expo-build-properties',
        {
          android: {
            compileSdkVersion: {{compileSdkVersion}},
            targetSdkVersion: {{targetSdkVersion}},
            buildToolsVersion: '{{buildToolsVersion}}',
          },
          ios: {
            deploymentTarget: '{{iosDeploymentTarget}}',
          },
        },
      ],
    ],
  },
};
```

</Tab>

</Tabs>

</ConfigPluginExample>

### All configurable properties

[`PluginConfigType`](#pluginconfigtype) interface represents currently available configuration properties.

## API

<APISection packageName="expo-build-properties" apiName="BuildProperties" />
